# audio_blog_backend

./: .gitignore  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: styles.less
frontend/src/components/: AudioPlayer.vue  NavBar.vue
frontend/src/data/: store.js
frontend/src/views/: HomeView.vue
sever/: main.py
